apply plugin: 'com.android.library'

android {
    compileSdk 35
    defaultConfig {
        minSdk 23
        targetSdk 35
    }


    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    namespace 'org.opencv'
}
